[package]
name = "kufefe"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.18", features = ["v1_25"] }
kube = { version = "0.82", features = ["runtime", "derive"] }
kube-derive = "0.82"
schemars = "0.8"
rand = "0.8"
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.21"
either = "1.8"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
tokio-retry = "0.3"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
